# qtdesktop

./: CHANGELOG  Categories.md  CrossCompiling.md  F15_QDE-maxi.ks  F15_QDE-mini.ks  FmConcept.md  GooglePIM.e4p  ObsCats.md  PackagingStyle.md  ProjectHome.md  QMailClient.md  QTagConvert.md  README  docuparser.cpp  fedora-livecd-qtdesktop.ks  helpdialog.cpp  index.h  main.cpp  pathc.cpp  pyqtarc.py  qrss.desktop  qrss.pro  qrss.qrc  qt-qde.nsi  qtdesktop-rtl.nsi  settings.cpp  tabbedbrowser.cpp
branches/pyqtarc-sql/: README  TODO  clean.sh  pyqtarc.qrc
branches/qgooglepim/: TODO
branches/qissues/: QIssues.e4p  blog.py  main.py
branches/qmailclient/: .qdevelop  TODO  qmailclient.pro  resources.qrc
branches/qrss/: README.txt  qrss.desktop  qrss.pro  qrss.qrc
branches/qrss/contrib/qrss/: CMakeLists.txt
branches/qrss/contrib/qrss/src/: mainwindowimpl.cpp  mainwindowimpl.h  rssitem.cpp  xmlparser.cpp
branches/qtfuse/: .qdevelop
branches/qtpim/: DB.dia  GTD.txt  README
branches/rassistant/: autoitems.cpp  autotext.cpp  autotext.h  config.cpp  config.h  docproperty.cpp  docproperty.h  docuparser.h  fontsettingsdialog.cpp  fontsettingsdialog.h  helpwindow.cpp  helpwindow.h  imageproperty.cpp  index.cpp  itemproperty.h  linkproperty.cpp  mainwindow.h  pcommon.h  profile.cpp  projectproperty.cpp  projectproperty.h  projectsources.h  ra.pro  ra.qrc  srclistparser.cpp  statistics.cpp  tableproperty.h  to-do.txt
contrib/: 412387.htm
contrib/drss/: cmdoptions.cpp  docu.cpp  docu.h  drss.qrc  drssdebug.h  feedlist.cpp  feedlist.h  rssfeed.h  rssitem.cpp  storylist.cpp
contrib/qrss/: TODO.txt
l10n/: qrss_ru.ts
pyqtarc/: pyqtarc.e4p
pyqtarc/contrib/: example.cpp
pyqtarc/dox/: 7z_test.txt  ArchiversFeatures.gnumeric  ClassDiagramm.txt  IDEAS.txt  TODO  chk_dive.py  walk_test.py  zip-v.txt
pyqtarc/sql/: data.sql
pyqtarc/src/: archfile.py  architem.py  architemmodel.py  architemset.py  (+4 more)
qgmailnotifier/: qgmailnotifier_sr.ts
qimageviewer/: imageViewer.qrc  mainwindow.cpp
qmailclient/: TODO  resources.qrc
qplayer/: QPlayer.pro  mainwindow.cpp
qrdc/: .qdevelop
qtarc/: .qdevelop  README  TODO  qtarc.pro  qtarc.py
qtextview/: bugs.txt  exts.h  main.cpp  mainwindow-qdeveloptmp.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
qtftp/: .qdevelop  Classes.dia  qtftp.pro
qtgreeter/: lightdm.spec  qtgreater.h  qtgreater.ui  qtgreeter.pro
qtinfo/: qtinfo.cpp  qtinfo.pro
qtpdfview/: mksrc.sh  qtpdfview.pro  qtpdfview.spec
qtpim/: States.dia
qtpuzzle/: mainwindow.cpp  mainwindow.h  qtpuzzle.desktop  qtpuzzle.pro
qtrun/: qtrun.desktop  qtrun.pro
qtselta/: Makefile  QtSelta.e4p
qutim-plugin/mrim/: CMakeLists.txt  mrim.qrc
qutim-plugin/mrim/coresrc/: MRIMClient.h  MRIMContactList.h  MRIMPacket.cpp  MRIMPluginSystem.cpp  MRIMUtils.h  Status.cpp  Status.h  avatarfetcher.cpp  mrimcontact.h  mrimeventhandler.cpp  mrimeventhandler.h  mrimgroup.cpp  statusmanager.h  useragent.cpp
qutim-plugin/mrim/coresrc/rtf/: rtfimport.cpp  rtfimport.h  rtfimport_tokenizer.cpp
qutim-plugin/mrim/uisrc/: addnumberwidget.h  authwidget.h  authwidget.ui  contactdetails.cpp  contactdetails.h  editaccount.cpp  filetransferwidget.h  filetransferwidget.ui  generalsettings.cpp  generalsettings.h  mrimloginwidget.h  renamewidget.h  settingswidget.cpp  smswidget.ui
qutim-plugin/mrim/xtraz/: xtrazdefs.h  xtrazpackage.cpp  xtrazutils.cpp
qutim-plugin/msn/: CMakeLists.txt
qutim-plugin/msn/core/: edditaccount.cpp  edditaccount.h  msnconnstatusbox.h  msngroup.h  msnlayer.cpp  msnsocket.h
qutim-plugin/msn/msn/: message.h  msnobject.cpp  notificationserver.cpp  util.cpp
rassistant/: autoitems.h  helpdialog.h  itemproperty.cpp  mainwindow.cpp  pcommon.cpp  projectsources.cpp  raedit.cpp  settings.h  srclistparser.h  statistics.h
single_inst/: qtlocalpeer.cpp
spins/: 2del  2del_fonts  2del_not_fonts  F15_QDE-nano.ks  F16_QDE-base.ks  README  fedora-livecd-qtdesktop.ks  fedora-livecd-qtdesktop.ks.3  mkspin
sql/: uninstall.sql  up_102_to_103.sql  up_91_to_92.sql
src/: Settings.py  architemmodel.cpp  architemview.py  archive.h  httpobserver.h  mail.h  maileditordialogimpl.h  main.cpp  mainwindowimpl.cpp  mainwindowimpl.h  mkrc.sh  rsschannel.cpp  rsscontainer.cpp  rsscontainer.h  xmlparser.cpp
trunk/: F15_QDE-base.ks  fedora-livecd-qtdesktop.ks  qt-qde.nsi  qtdesktop-rtl.dot  qtdesktop-rtl.nsi
trunk/qutim-plugin/jabber/: CMakeLists.txt  COPYING  jabber.qrc  ver
trunk/qutim-plugin/jabber/include/qutim/: jabber.h
trunk/qutim-plugin/jabber/src/: ContactSettings.cpp  JabberSettings.cpp  JabberSettings.h  JabberSettings.ui  VCardAvatar.cpp  VCardLabel.cpp  VCardLabel.h  VCardLinedit.cpp  VCardLinedit.h  VCardMemo.cpp  VCardMemo.h  VCardTextedit.cpp  VCardTextedit.h  acceptautdialog.cpp  acceptautdialog.ui  activitydialog.cpp  activitydialog.ui  customstatusdialog.cpp  customstatusdialog.ui  jAccount.cpp  jAccount.h  jAccountSettings.cpp  jAddContact.ui  jAdhoc.cpp  jAdhoc.h  jBuddy.h  jClientIdentification.cpp  jClientIdentification.h  jConferenceConfig.h  jConferenceParticipant.cpp  jConferenceParticipant.h  jConferenceParticipant.ui  jConnection.cpp  jConnectionServer.cpp  jConnectionServer.h  jDataForm.h  jDiscoItem.h  jEventHandler.cpp  jFileTransfer.cpp  jFileTransfer.h  (+40 more)
trunk/qutim-plugin/jabber/src/conference/: reasondialog.cpp  topicConfig.ui  topicConfigDialog.h
trunk/qutim-plugin/jabber/src/gloox/: dns.cpp  dns.h
trunk/qutim-plugin/jabber/src/xeps/: activityextension.cpp  gmailextension.cpp  gmailextension.h  moodsextenstion.cpp  moodsextenstion.h  tuneextension.h  versionextension.cpp  xpresenceextension.cpp  xstatusextension.h
trunk/qutim-plugin/msn/msn/: CMakeLists.txt  connection.cpp  externals.h  notificationserver.h  p2p.cpp  passport.cpp  soap.cpp  util.h  xmlParser.cpp
ui/: Ui_main.py  mainwindow.ui
wiki/: AppList.wiki  Categories.wiki  CrossCompiling.wiki  FmConcept.wiki  Members.wiki  ObsCats.wiki  PackagingStyle.wiki  PageName.wiki  PkgList.wiki  QMailClient.wiki  QTagConvert.wiki  ToDo.wiki  Wanted.wiki  xDM.wiki
winrepo/: QtDesktop.xml
(+875 files in other folders)
